--- a/bmsg-ranking.html
+++ b/bmsg-ranking.html
@@ -193,7 +193,7 @@
                     <li class="nav-item"><a class="nav-link active" href="bmsg-ranking.html">Ranking</a></li>
                     <li class="nav-item"><a class="nav-link" href="bmsg-mylist.html">MyList</a></li>
                 </ul>
-                <a href="#" class="btn btn-outline-light ms-lg-3 rounded-pill">Login</a>
+                <a href="bmsg-login.html" class="btn btn-outline-light ms-lg-3 rounded-pill">Login</a>
             </div>
         </div>
     </nav>
